--- a/Parkways in New York/style.css
+++ b/Parkways in New York/style.css
@@ -24,8 +24,7 @@
 	margin: 0px 65px 0px 65px;
 }
 .Westchester-BronxParkways img {
-	width: 49%;
-	height: auto;
+	width: auto;
 	margin: 1%;
 	min-width: 15em;
 	min-height: 20em;
