--- a/Parkways in New York/style.css
+++ b/Parkways in New York/style.css
@@ -23,12 +23,13 @@
 	margin: 0px 65px 0px 65px;
 }
 .Westchester-BronxParkways img {
-	width: 49%;
-	margin: 1%;
+	width: 200px;
+	margin: 15px;
 	min-width: 15em;
 	min-height: 10em;
 	max-width: 45em;
 	max-height: 25em;
+	text-align: center;
 	float: left;
 	padding: 0px 30px 0px 30px;
 	margin: 5px 0px 5px 0px;
