--- a/Parkways in New York/style.css
+++ b/Parkways in New York/style.css
@@ -14,7 +14,7 @@
 	max-height: 30px;
 	float: left;
 }
-.Westchester-BronxParkways {
+.Westchester-Bronx {
 	background-color: #663300;
 	background-repeat: no-repeat;
 	width: 100%;
@@ -22,7 +22,7 @@
 	padding: 20px 50px 20px 50px;
 	margin: 0px 40px 0px 40px;
 }
-.Westchester-BronxParkways img {
+.Westchester-Bronx img {
 	width: 200px;
 	margin: 15px;
 	min-width: 15em;
