Parkways in New York

--- a/Parkways in New York/style.css
+++ b/Parkways in New York/style.css
@@ -23,7 +23,7 @@
 	margin: 0px 40px 0px 40px;
 }
 .Westchester-Bronx img {
-	width: 50em;
+	width: 400px;
 	margin: 15px;
 	min-width: 15em;
 	min-height: 10em;
