--- a/Parkways in New York/style.css
+++ b/Parkways in New York/style.css
@@ -23,8 +23,8 @@
 	margin: 0px 40px 0px 40px;
 }
 .Westchester-Bronx img {
-	width: 400px;
-	margin: 15px;
+	width: 49%;
+	margin: 1%;
 	min-width: 15em;
 	min-height: 10em;
 	max-width: 35em;
