--- a/Parkways in New York/style.css
+++ b/Parkways in New York/style.css
@@ -15,7 +15,10 @@
 	min-height: 10px;
 	max-width: 20px;
 	max-height: 30px;
+	text-align: center;
 	float: left;
+	padding: 10px 25px 10px 25px;
+	margin: 10px 0px 10px 0px;
 }
 .Westchester-Bronx {
 	background-color: #663300;
