--- a/Parkways in New York/style.css
+++ b/Parkways in New York/style.css
@@ -5,8 +5,8 @@
 	background-repeat: no-repeat;
 	width: 100%;
 	float: left;
-	padding: 0px;
-	margin: 0px;
+	padding: 25px 10px 25px 10px;
+	margin: 0px 5px 0px 5px;
 }
 .Westchester.North-SouthParkways img {
 	width: 32.33%;
