--- a/Parkways in New York/style.css
+++ b/Parkways in New York/style.css
@@ -11,10 +11,10 @@
 .Westchester.North-SouthParkways img {
 	width: 32.33%;
 	margin: 1%;
-	min-width: 5px;
-	min-height: 10px;
-	max-width: 20px;
-	max-height: 30px;
+	min-width: 5em;
+	min-height: 10em;
+	max-width: 15em;
+	max-height: 25em;
 	text-align: center;
 	float: left;
 	padding: 10px 25px 10px 25px;
