--- a/Parkways in New York/style.css
+++ b/Parkways in New York/style.css
@@ -11,10 +11,10 @@
 .Westchester.North-SouthParkways img {
 	width: 32.33%;
 	margin: 1%;
-	min-width: 5em;
-	min-height: 10em;
-	max-width: 10em;
-	max-height: 15em;
+	min-width: 50px;
+	min-height: 70px;
+	max-width: 100px;
+	max-height: 120px;
 	text-align: center;
 	float: left;
 	padding: 0px 25px 0px 25px;
