--- a/Parkways in New York/style.css
+++ b/Parkways in New York/style.css
@@ -1,6 +1,6 @@
 *{ margin:0; padding:0; box-sizing: border-box;}
 
-.Westchester.North-SouthParkways {
+.Westchester.North-South {
 	background-color: #009933;
 	background-repeat: no-repeat;
 	width: 100%;
@@ -8,7 +8,7 @@
 	padding: 30px 40px 30px 40px;
 	margin: 0px 5px 0px 5px;
 }
-.Westchester.North-SouthParkways img {
+.Westchester.North-South img {
 	width: 32.33%;
 	margin: 1%;
 	min-width: 10em;
