Parkways in New York

--- a/Parkways in New York/style.css
+++ b/Parkways in New York/style.css
@@ -5,6 +5,10 @@
 	background-repeat: no-repeat;
 	width: 100%;
 	float: left;
+	min-width: 5em;
+	min-height: 10em;
+	max-width: 25em;
+	max-height: 30em;
 	padding: 30px 40px 30px 40px;
 	margin: 15px 30px 15px 30px;
 }
