--- a/Parkways in New York/style.css
+++ b/Parkways in New York/style.css
@@ -19,6 +19,7 @@
 	min-height: 10em;
 	max-width: 20em;
 	max-height: 25em;
+	height: 200px;
 	text-align: center;
 	float: left;
 	padding: 10px 25px 10px 25px;
