--- a/Parkways in New York/style.css
+++ b/Parkways in New York/style.css
@@ -2,6 +2,7 @@
 
 .Westchester.North-South {
 	background-color: #009933;
+	background-size: 100%;
 	background-repeat: no-repeat;
 	width: 100%;
 	float: left;
