--- a/Parkways in New York/style.css
+++ b/Parkways in New York/style.css
@@ -18,7 +18,7 @@
 	margin: 1%;
 	min-width: 5em;
 	min-height: 10em;
-	max-width: 20em;
+	max-width: 100%;
 	max-height: 25em;
 	height: 200px;
 	text-align: center;
