--- a/Parkways in New York/style.css
+++ b/Parkways in New York/style.css
@@ -5,6 +5,7 @@
 	background-size: 100%;
 	background-repeat: no-repeat;
 	width: 100%;
+	height: auto;
 	float: left;
 	min-width: 5em;
 	min-height: 10em;
