--- a/Parkways in New York/style.css
+++ b/Parkways in New York/style.css
@@ -27,6 +27,31 @@
 	padding: 0px 15px 0px 15px;
 	margin: 10px 0px 10px 0px;
 }
+.East-West {
+	background-color: #99ff33;
+	background-size: 100%;
+	background-repeat: no-repeat;
+	width: 100%;
+	float: left;
+	min-width: 25px;
+	min-height: 50px;
+	max-width: 60px;
+	max-height: 110px;
+	padding: 0px 0px 0px 0px;
+	margin: 0px 0px 0px 0px;
+}
+.East-West img {
+	width: 49%;
+	margin: 1%;
+	min-width: 5em;
+	min-height: 10em;
+	max-width: 15em;
+	max-height: 25em;
+	text-align: center;
+	float: left;
+	padding: 0px 10px 0px 10px;
+	margin: 15px 5px 15px 5px;	
+}
 .Westchester-Bronx {
 	background-color: #663300;
 	background-repeat: no-repeat;
