--- a/Parkways in New York/style.css
+++ b/Parkways in New York/style.css
@@ -5,7 +5,7 @@
 	background-repeat: no-repeat;
 	width: 100%;
 	float: left;
-	padding: 30px 75px 30px 75px;
+	padding: 30px 55px 30px 55px;
 	margin: 0px 30px 0px 30px;
 }
 .Westchester.North-South img {
@@ -13,7 +13,7 @@
 	margin: 1%;
 	min-width: 5em;
 	min-height: 10em;
-	max-width: 100%;
+	max-width: 20em;
 	max-height: 25em;
 	height: 250px;
 	text-align: center;
