--- a/Parkways in New York/style.css
+++ b/Parkways in New York/style.css
@@ -14,7 +14,7 @@
 	min-width: 5em;
 	min-height: 10em;
 	max-width: 20em;
-	max-height: 25em;
+	max-height: 49%;
 	height: 250px;
 	text-align: center;
 	float: left;
