--- a/Parkways in New York/style.css
+++ b/Parkways in New York/style.css
@@ -11,9 +11,9 @@
 .Westchester.North-South img {
 	width: 32.33%;
 	margin: 1%;
-	min-width: 5em;
-	min-height: 10em;
-	max-width: 20em;
+	min-width: 30px;
+	min-height: 40px;
+	max-width: 75px;
 	max-height: 100%;
 	height: 250px;
 	text-align: center;
