--- a/Parkways in New York/style.css
+++ b/Parkways in New York/style.css
@@ -11,10 +11,10 @@
 .Westchester.North-South img {
 	width: 32.33%;
 	margin: 1%;
-	min-width: 30px;
-	min-height: 40px;
-	max-width: 75px;
-	max-height: 100%;
+	min-width: 250px;
+	min-height: 320px;
+	max-width: 1000px;
+	max-height: 1200px;
 	height: 250px;
 	text-align: center;
 	float: left;
