--- a/Parkways in New York/style.css
+++ b/Parkways in New York/style.css
@@ -35,7 +35,7 @@
 	min-width: 15em;
 	min-height: 10em;
 	max-width: 25em;
-	max-height: 49%;
+	max-height: 15em;
 	text-align: center;
 	float: left;
 	padding: 10px 40px 10px 40px;
