--- a/Parkways in New York/style.css
+++ b/Parkways in New York/style.css
@@ -11,11 +11,11 @@
 .North-SouthParkways img {
 	width: 32.33%;
 	margin: 1%;
-	min-width: 250px;
-	min-height: 320px;
-	max-width: 1000px;
-	max-height: 600px;
-	height: 250px;
+	min-width: 5em;
+	min-height: 10em;
+	max-width: 15em;
+	max-height: 25em;
+	height: 5em;
 	text-align: center;
 	float: left;
 	padding: 0px 20px 0px 20px;
