--- a/Parkways in New York/style.css
+++ b/Parkways in New York/style.css
@@ -4,7 +4,8 @@
 	background-color: #009933;
 	background-repeat: no-repeat;
 	width: 100%;
-	padding: 5px 20px 5px 20px;
+	float: left;
+	padding: 0px 20px 0px 20px;
 	margin: 0px 0px 0px 0px;
 }
 .North-SouthParkways img {
