--- a/Parkways in New York/style.css
+++ b/Parkways in New York/style.css
@@ -4,7 +4,7 @@
 	background-color: #009933;
 	background-repeat: no-repeat;
 	width: 100%;
-	
+	float: left;
 	padding: 0px 30px 0px 30px;
 	margin: 0px 20px 0px 20px;
 }
