--- a/Parkways in New York/style.css
+++ b/Parkways in New York/style.css
@@ -5,6 +5,7 @@
 	background-repeat: no-repeat;
 	width: 100%;
 	float: left;
+	position: relative;
 	padding: 10px 20px 10px 20px;
 	margin: 0px 5px 0px 5px;
 }
