--- a/Parkways in New York/style.css
+++ b/Parkways in New York/style.css
@@ -19,6 +19,7 @@
 	height: 0em;
 	text-align: center;
 	float: left;
+	position: relative;
 	padding: 10px 30px 10px 30px;
 	margin: 20px 0px 20px 0px;
 }
