--- a/Parkways in New York/style.css
+++ b/Parkways in New York/style.css
@@ -4,6 +4,10 @@
 	background-color: #009933;
 	background-repeat: no-repeat;
 	width: 100%;
+	min-width: 100px;
+	min-height: 150px;
+	max-width: 250px;
+	max-height: 300px;
 	float: left;
 	padding: 0px 20px 0px 20px;
 	margin: 0px 0px 0px 0px;
