--- a/Parkways in New York/style.css
+++ b/Parkways in New York/style.css
@@ -16,7 +16,7 @@
 	max-width: 50em;
 	max-height: 25em;
 	text-align: center;
-	float: left;
+	float: right;
 	padding: 10px 20px 10px 20px;
 	margin: 10px 0px 10px 0px;
 }
