--- a/Parkways in New York/style.css
+++ b/Parkways in New York/style.css
@@ -60,6 +60,23 @@
 	padding: 10px 20px 10px 20px;
 	margin: 15px 0px 15px 0px;
 }
+.Speedlimits {
+	width: 100%;
+	float: left;
+	padding: 0px 10px 0px 10px;
+	margin: 0px 0px 0px 0px;
+}
+.Speedlimits img {
+	width: 32.33%;
+	margin: 1%;
+	min-width: 10em;
+	min-height: 5em;
+	max-width: 25em;
+	max-height: 30em;
+	float: left;
+	padding: 10px 20px 10px 20px;
+	margin: 10px 0px 10px 0px;
+}
 h1 {
 	font-family: sans-serif;
 }
