--- a/Parkways in New York/style.css
+++ b/Parkways in New York/style.css
@@ -73,6 +73,7 @@
 	min-height: 5em;
 	max-width: 25em;
 	max-height: 30em;
+	text-align: center;
 	float: left;
 	padding: 10px 20px 10px 20px;
 	margin: 10px 0px 10px 0px;
