Parkways in New York

--- a/Parkways in New York/style.css
+++ b/Parkways in New York/style.css
@@ -61,6 +61,8 @@
 	margin: 15px 0px 15px 0px;
 }
 .Speedlimits {
+	background-color: #FFFFFF;
+	background-repeat: no-repeat;
 	width: 100%;
 	float: left;
 	padding: 0px 10px 0px 10px;
